--- a/NuBusTest/packages.config
+++ b/NuBusTest/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.3.0" targetFramework="net461" />
+  <package id="FakeItEasy" version="2.3.3" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net45" />
 </packages>
